flattern groups/Rule status
